kubernetes/travelmanagement/frontend/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: travelmngt-web-service
spec:
  type: NodePort
  selector:
    app: travelmngt-web
    tier: frontend
  ports:
  - protocol: TCP
    port: 8085
    targetPort: 8085
