kubernetes/travelmanagement/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: travelmngt-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      sub_filter_once off;
      sub_filter_types *;
      sub_filter 'href="/' 'href="/travma/';
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /travma(/|$)(.*)
        backend:
          service:
            name: travelmngt-web-service
            port:
              number: 8085
